chore: Testing on my branch

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,10 +3,10 @@ on:
     branches:
       - master
       - development
+      - chore/sanity-check
   pull_request:
     branches:
       - master
-      - development
 
 jobs:
   terraform:
